# cowbot-hs

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CHANGELOG.md.save0  Dockerfile  LICENSE  Main.hs  README.md  cabal.project  cowbot-hs.cabal  cowbot-stack.cabal  cowbot.cabal  hie.yaml  package.yaml  stack.yaml
.github/workflows/: cabal.yml  docker-publish.yml  haskell.yml  heroku-deploy.yml  stack.yml
app/: Main.hs  Secrets.hs
app/Commands/: AlBless.hs  Bless.hs  Clock.hs  Translate.hs  Units.hs  Youtube.hs
app/Data/: Language.hs  Random.hs  Translation.hs
docker/: dockerfile
src/: Bot.hs  Commands.hs  Constants.hs  Net.hs  Parser.hs  Reactions.hs  Secrets.hs  Testing.hs  Translate.hs  Types.hs
src/Bot/: Internal.hs
src/Bot/Internal/: Command.hs  Data.hs  Discord.hs  Net.hs  Parser.hs  Reply.hs
src/Commands/: About.hs  Base.hs  Bless.hs  Clap.hs  Help.hs  Manager.hs  Translate.hs  Uwu.hs  Youtube.hs
src/Data/: Bot.hs  CLI.hs  Command.hs  Discord.hs  Language.hs  Parse.hs  Translation.hs
src/Data/Data/: Random.hs
src/Howdy/: Actions.hs  Bot.hs  Context.hs  Parser.hs
src/Howdy/Parser/: Trans.hs  Types.hs
src/Net/: Bless.hs  Translate.hs  Youtube.hs
src/Net/Internal/: Request.hs
src/Network/: Discord.hs  Network.hs  Request.hs
src/Parser/: Constructors.hs  Interpreter.hs  Parser.hs  Types.hs
src/Reactions/: Translate.hs
src/Types/: Command.hs  Data.hs  Discord.hs  Parser.hs  Reply.hs  Translate.hs
