cabal-version:      3.0
name:               cowbot
version:            0.1.0.0
synopsis:           Discord bot

-- A longer description of the package.
-- description:
homepage:           https://github.com/stereoknife/cowbot-hs

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-2-Clause
license-file:       LICENSE
author:             kam
maintainer:         11618271+stereoknife@users.noreply.github.com

-- A copyright notice.
-- copyright:
category:           Web

executable cowbot
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Commands.Bless
        Commands.Translate
        Commands.Youtube
        Data.Language
        Data.Translation
        Data.Random
        Secrets

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
          howdy           == 0.1.0.2
        , base            ^>= 4.14.0.0 
        , text            ^>= 1.2.4.1
        , aeson           ^>= 2.0.1.0
        --, http-client     ^>= 0.7.9
        --, http-client-tls ^>= 0.3.5.3
        , http-conduit
        , http-types
        , exceptions      ^>= 0.10.4
        , discord-haskell
        , html-entities
        , random
        , process         ^>=1.6.13.2
    hs-source-dirs:   app
    default-extensions: OverloadedStrings
    default-language: Haskell2010
